Fix Bug 321303 - Leave A Note widget: Delivered note presents itself in raw HTML code.

FIXED-IN: 4.11.3
BUG: 321303